# VideoCaption

./: Dockerfile_celery_worker  Dockerfile_django  brainstorm.md  devstart.sh  docker-compose.yml  entrypoint.sh  manage.py  nginx.conf  pyproject.toml  readme.md  requirements.txt  server_init.sh  videocaption.env  worker_init.sh
api/: models.py  urls.py  views.py
frontend/: package.json
frontend/src/: App.js  Captions.js  History.js  Navigator.js  Operations.js  Reducer.js  Store.js  StreamFetch.js  Upload.js  VideoJs.js
videocaption/: asgi.py  celery.py  settings.py  tasks.py  urls.py  views.py  wsgi.py
