[tool.poetry]
name = "videocaption"
version = "0.1.0"
description = ""
authors = ["attripathi <attripathi@gainsight.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.1.1"
psycopg2-binary = "^2.9.9"
celery = "^5.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
